history overflow fix

--- a/assets/main.css
+++ b/assets/main.css
@@ -317,13 +317,15 @@ span {
 }
 
 .history-item {
-    display: flex;
+    display: block; 
     justify-content: center;
     padding: 10px;
     border-bottom: 1px solid rgba(255, 255, 255, 0.1);
     cursor: pointer;
     width: 100%;
-
+    text-overflow: ellipsis; 
+    overflow: hidden; 
+    white-space: nowrap;
     transition: background-color 0.3s ease;
 }
 
